@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 9cab3dae99e727c229c28d884b64a78c89a4f502 ChangeLog
+SHA1 7b6ce107c2a821c8e62026b429418ba8a6649cc6 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
 SHA1 b6e500c0d861ae49508046ae17d9db988f4854f0 META.yml
-SHA1 473f081fc3fb94add385351577548ce2a63bfb71 Makefile.PL
+SHA1 e05088e6b42b997c74baba3cff446e916cf5285f Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTwydGAAoJEBa/9Pad787EmuQIAMdKzWfJvkvS29fV3phW/XU/
-YQiCZATzOwt2Kl2ct1YWrle2OmOLsbrAw3Tz6TOFdOHsVCz0Sb10tij9vY1DHTIU
-3DUPIRJcchNklxoM+Ps4mXZIMNo61DLP1oelXa8MLCeiKovwN2FDnnC5kfJH5tzs
-SClTcrV16PNp+WbgJzWHVMFRa4E4k3EU+xDzABCsnr/lyQiuEKBaxF6tsHytvC9O
-QZZlLTUCLZ0cCMDTPO1a8ZbgtaZUnyXjwBLjYPjOhz+GXQUalhpj91fkhXU6aYtw
-xY51RubjExtHFP9DxOwxL1xK9GRSEVP9Cy5YK+Q2qzhhjWoxtIG/yLmgDP1D38k=
-=blhH
+iQEcBAEBAgAGBQJTwzNVAAoJEBa/9Pad787EpGwH/0S0SOxWcX4SV/XUhjIBQzAV
+cEveC5rq+LknZBAr6qJFHainJpfKDjhOYtS2ejq38F2we8cz1FHpuipKaqeT/tql
+7jNmC4qV+PTXiqM4TrfvDAkpDeqGM9mARFSoXZbuqxwLdbWurckoBvUnfHDGdRlS
+9cjkvNHbjLDi1bRw9WvWMUyJRCbqf9o8HrbNqklI8E6Dwe3fbsjV86ed2NVJa2Tk
+dcud4byRgCLqYlYvJzVOdTq9xhfBHsqF0QLyYvQzYbDVne2zxZpIYBF4e0Lmi5TB
+EFsKi23PNZCV+FxtgbXuCFVw0358rqzVXKfSVzSDBdI5tH6CzCHoCeZOPJh+u5c=
+=A9Xv
 -----END PGP SIGNATURE-----
